--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
+# .env.local
+# .env.development.local
 .env.test.local
 .env.production.local
 
